--- a/CinemaBook/Scence/Manager/Management/ManagementInterestMovie/view/ManagementInterestMovieViewController.xib
+++ b/CinemaBook/Scence/Manager/Management/ManagementInterestMovie/view/ManagementInterestMovieViewController.xib
@@ -58,15 +58,26 @@
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-plus" translatesAutoresizingMaskIntoConstraints="NO" id="Gu3-rZ-NHS">
                                             <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
                                         </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R1s-MO-Pbh">
+                                            <rect key="frame" x="-8" y="0.0" width="30" height="22"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="j8T-PZ-nSy"/>
+                                            </constraints>
+                                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <state key="normal" title="Button"/>
+                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     <constraints>
+                                        <constraint firstItem="R1s-MO-Pbh" firstAttribute="top" secondItem="KmF-7s-wNg" secondAttribute="top" id="2Xw-1X-S4c"/>
                                         <constraint firstItem="Gu3-rZ-NHS" firstAttribute="leading" secondItem="KmF-7s-wNg" secondAttribute="leading" id="55Y-Mc-kHN"/>
                                         <constraint firstItem="Gu3-rZ-NHS" firstAttribute="top" secondItem="KmF-7s-wNg" secondAttribute="top" id="7rI-KF-rsw"/>
                                         <constraint firstAttribute="trailing" secondItem="Gu3-rZ-NHS" secondAttribute="trailing" id="Gx0-lf-Ipt"/>
                                         <constraint firstAttribute="bottom" secondItem="Gu3-rZ-NHS" secondAttribute="bottom" id="Qdf-zK-3rQ"/>
+                                        <constraint firstAttribute="bottom" secondItem="R1s-MO-Pbh" secondAttribute="bottom" id="SXK-Jb-M6l"/>
                                         <constraint firstAttribute="height" constant="22" id="ShH-7R-qCs"/>
                                         <constraint firstAttribute="width" constant="22" id="qKP-B3-JJm"/>
+                                        <constraint firstAttribute="trailing" secondItem="R1s-MO-Pbh" secondAttribute="trailing" id="yJq-kW-hBJ"/>
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z1p-fD-uoH">
