--- a/CinemaBook/Scence/Manager/Management/ManagementInterestMovie/view/ManagementInterestMovieViewController.xib
+++ b/CinemaBook/Scence/Manager/Management/ManagementInterestMovie/view/ManagementInterestMovieViewController.xib
@@ -65,6 +65,9 @@
                                             </constraints>
                                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <state key="normal" title="Button"/>
+                                            <connections>
+                                                <action selector="btn_showDialogPopUpListViewController:" destination="-1" eventType="touchUpInside" id="PSe-DX-081"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
