--- a/CinemaBook/Scence/SplachScreen/view/SplachScreenViewController.xib
+++ b/CinemaBook/Scence/SplachScreen/view/SplachScreenViewController.xib
@@ -18,22 +18,22 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LOGO-APP" translatesAutoresizingMaskIntoConstraints="NO" id="UYH-bD-FEE">
-                    <rect key="frame" x="0.0" y="-6" width="414" height="918"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="banner-logo" translatesAutoresizingMaskIntoConstraints="NO" id="UYH-bD-FEE">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="0.12941176470588234" green="0.14117647058823529" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="UYH-bD-FEE" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="-50" id="723-TC-LM5"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="UYH-bD-FEE" secondAttribute="trailing" id="k9f-MR-baA"/>
-                <constraint firstItem="UYH-bD-FEE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="qEU-hi-X8s"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="UYH-bD-FEE" secondAttribute="bottom" constant="-50" id="znm-0T-WWI"/>
+                <constraint firstItem="UYH-bD-FEE" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="Pes-15-TQ3"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="UYH-bD-FEE" secondAttribute="bottom" id="QWo-wh-HND"/>
+                <constraint firstItem="UYH-bD-FEE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="UfD-1M-NcC"/>
+                <constraint firstItem="UYH-bD-FEE" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="rXx-L8-2wu"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="132" y="84"/>
+            <point key="canvasLocation" x="131.8840579710145" y="83.705357142857139"/>
         </view>
     </objects>
     <resources>
-        <image name="LOGO-APP" width="1010" height="554"/>
+        <image name="banner-logo" width="1080" height="1920"/>
     </resources>
 </document>
