--- a/CinemaBook/Scence/Manager/Management/ManagementInterestMovie/DialogPopupListMovie/DialogPopupListMovieViewController.xib
+++ b/CinemaBook/Scence/Manager/Management/ManagementInterestMovie/DialogPopupListMovie/DialogPopupListMovieViewController.xib
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DialogPopupListMovieViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
                 <outlet property="tableView" destination="Ttc-xp-otn" id="3xt-i0-rR2"/>
+                <outlet property="text_field_search" destination="5hK-Tf-FPZ" id="Y0v-2g-B4p"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -72,23 +73,76 @@
                             </constraints>
                         </view>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ttc-xp-otn">
-                            <rect key="frame" x="0.0" y="30" width="400" height="230"/>
+                            <rect key="frame" x="0.0" y="70" width="400" height="190"/>
                             <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </tableView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c6s-LU-h2Y">
+                            <rect key="frame" x="0.0" y="30" width="400" height="40"/>
+                            <subviews>
+                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iXJ-cm-E9j">
+                                    <rect key="frame" x="20" y="5" width="360" height="30"/>
+                                    <subviews>
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tìm kiếm" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5hK-Tf-FPZ">
+                                            <rect key="frame" x="32" y="0.0" width="328" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-search-2" translatesAutoresizingMaskIntoConstraints="NO" id="4NO-xN-Eby">
+                                            <rect key="frame" x="10" y="4" width="22" height="22"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="22" id="QJP-a2-6ms"/>
+                                                <constraint firstAttribute="height" constant="22" id="jBx-EV-L6Q"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    <constraints>
+                                        <constraint firstItem="4NO-xN-Eby" firstAttribute="leading" secondItem="iXJ-cm-E9j" secondAttribute="leading" constant="10" id="R41-tc-f8x"/>
+                                        <constraint firstAttribute="bottom" secondItem="5hK-Tf-FPZ" secondAttribute="bottom" id="REz-cO-mM8"/>
+                                        <constraint firstItem="5hK-Tf-FPZ" firstAttribute="leading" secondItem="4NO-xN-Eby" secondAttribute="trailing" id="Tb3-d8-Yr7"/>
+                                        <constraint firstAttribute="trailing" secondItem="5hK-Tf-FPZ" secondAttribute="trailing" id="VxK-ts-x0U"/>
+                                        <constraint firstItem="4NO-xN-Eby" firstAttribute="centerY" secondItem="iXJ-cm-E9j" secondAttribute="centerY" id="t9e-hh-qNZ"/>
+                                        <constraint firstItem="5hK-Tf-FPZ" firstAttribute="top" secondItem="iXJ-cm-E9j" secondAttribute="top" id="yzH-37-oza"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="15"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                            <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                            <real key="value" value="1"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="2Zk-Sj-ZEy"/>
+                                <constraint firstAttribute="bottom" secondItem="iXJ-cm-E9j" secondAttribute="bottom" constant="5" id="5WH-eA-EHx"/>
+                                <constraint firstAttribute="trailing" secondItem="iXJ-cm-E9j" secondAttribute="trailing" constant="20" id="WoO-bJ-TFi"/>
+                                <constraint firstItem="iXJ-cm-E9j" firstAttribute="leading" secondItem="c6s-LU-h2Y" secondAttribute="leading" constant="20" id="t5n-sX-Cgu"/>
+                                <constraint firstItem="iXJ-cm-E9j" firstAttribute="top" secondItem="c6s-LU-h2Y" secondAttribute="top" constant="5" id="ye1-BN-vqB"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="400" id="3HI-es-J9G"/>
                         <constraint firstAttribute="trailing" secondItem="O1Q-YX-UCz" secondAttribute="trailing" id="4O6-U4-M1U"/>
+                        <constraint firstItem="O1Q-YX-UCz" firstAttribute="top" secondItem="Ttc-xp-otn" secondAttribute="bottom" id="7C1-0k-EJd"/>
+                        <constraint firstItem="c6s-LU-h2Y" firstAttribute="top" secondItem="AcE-6Z-nbh" secondAttribute="bottom" id="8aV-QD-W9y"/>
                         <constraint firstItem="AcE-6Z-nbh" firstAttribute="leading" secondItem="dfu-zD-D4S" secondAttribute="leading" id="BTv-j0-eUa"/>
-                        <constraint firstItem="O1Q-YX-UCz" firstAttribute="top" secondItem="Ttc-xp-otn" secondAttribute="bottom" id="E77-HA-ovq"/>
-                        <constraint firstAttribute="trailing" secondItem="Ttc-xp-otn" secondAttribute="trailing" id="FeR-ba-2rN"/>
                         <constraint firstAttribute="trailing" secondItem="AcE-6Z-nbh" secondAttribute="trailing" id="HCE-8x-mbL"/>
                         <constraint firstAttribute="bottom" secondItem="O1Q-YX-UCz" secondAttribute="bottom" id="NRG-nm-KT4"/>
                         <constraint firstItem="O1Q-YX-UCz" firstAttribute="leading" secondItem="dfu-zD-D4S" secondAttribute="leading" id="SHc-n4-x6g"/>
-                        <constraint firstItem="Ttc-xp-otn" firstAttribute="leading" secondItem="dfu-zD-D4S" secondAttribute="leading" id="d7U-ux-WLF"/>
+                        <constraint firstAttribute="trailing" secondItem="Ttc-xp-otn" secondAttribute="trailing" id="Tde-Q9-bRa"/>
+                        <constraint firstAttribute="trailing" secondItem="c6s-LU-h2Y" secondAttribute="trailing" id="YX0-BD-yph"/>
+                        <constraint firstItem="Ttc-xp-otn" firstAttribute="top" secondItem="c6s-LU-h2Y" secondAttribute="bottom" id="a5i-Ye-jzN"/>
+                        <constraint firstItem="Ttc-xp-otn" firstAttribute="leading" secondItem="dfu-zD-D4S" secondAttribute="leading" id="bNd-0M-oF4"/>
                         <constraint firstItem="AcE-6Z-nbh" firstAttribute="top" secondItem="dfu-zD-D4S" secondAttribute="top" id="ifC-vF-q2t"/>
-                        <constraint firstItem="Ttc-xp-otn" firstAttribute="top" secondItem="AcE-6Z-nbh" secondAttribute="bottom" id="j4W-kF-F11"/>
+                        <constraint firstItem="c6s-LU-h2Y" firstAttribute="leading" secondItem="dfu-zD-D4S" secondAttribute="leading" id="vgZ-kh-df6"/>
                         <constraint firstAttribute="height" constant="300" id="wqj-aH-WL1"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
@@ -113,4 +167,7 @@
             <point key="canvasLocation" x="131.91964285714286" y="107.24637681159422"/>
         </view>
     </objects>
+    <resources>
+        <image name="icon-search-2" width="18" height="18"/>
+    </resources>
 </document>
